@@ -21,6 +21,8 @@ version 2.4.1 ():
 	* Remove a workaround for older versions gstreamer that was causing
 	  crashes on some non-Linux systems such as HPUX
 	* Fix some cases of the conversation input entry area being 1 pixel high
+	* Fix for displaying channel & buddy names in conversation window when
+	  they have '&' in them
 
 	Finch:
 	* Fix compiling with Glib older than 2.6
